- added -T rsyslogd command line option, enables to specify a directory
  where to chroot() into on startup. This is NOT a security feature but
  introduced to support testing. Thus, -T does not make sure chroot()
  is used in a secure way. (may be removed later)
- added omstdout module for testing purposes. Spits out all messages to
  stdout - no config option, no other features
- modified $ModLoad statement so that for modules whom's name starts with
  a dot, no path is prepended (this enables relative-pathes and should
  not break any valid current config)
---------------------------------------------------------------------------
Version 4.1.5  [DEVEL] (rgerhards), 2009-03-11
- bugfix: parser did not correctly parse fields in UDP-received messages
- added ERE support in filter conditions
  new comparison operation "ereregex"
- added new config directive $RepeatedMsgContainsOriginalMsg so that the
  "last message repeated n times" messages, if generated, may
  have an alternate format that contains the message that is being repeated
---------------------------------------------------------------------------
Version 4.1.4  [DEVEL] (rgerhards), 2009-01-29
- bugfix: inconsistent use of mutex/atomic operations could cause segfault
  details are too many, for full analysis see blog post at:
  http://blog.gerhards.net/2009/01/rsyslog-data-race-analysis.html
- bugfix: unitialized mutex was used in msg.c:getPRI
  This was subtle, because getPRI is called as part of the debugging code
  (always executed) in syslogd.c:logmsg.
- bufgix: $PreserveFQDN was not properly handled for locally emitted
  messages
---------------------------------------------------------------------------
Version 4.1.3  [DEVEL] (rgerhards), 2008-12-17
- added $InputTCPServerAddtlFrameDelimiter config directive, which
  enables to specify an additional, non-standard message delimiter
  for processing plain tcp syslog. This is primarily a fix for the invalid