@@ -1,0 +1,4 @@
+<34>1 2003-10-11T22:14:15.003Z mymachine.example.com su - ID47 - BOM'su root' failed for lonvick on /dev/pts/8
+34,auth,crit,Oct 11 22:14:15,mymachine.example.com,,su,- BOM'su root' failed for lonvick on /dev/pts/8
+#Example from RFC5424, section 6.5 / sample 1
+#Only the first two lines are important, you may place anything behind them!
